platform/kubernetes/network-policies-calico/allow-namespace-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
